[package]
name = "vanilla-example"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { git = "https://github.com/ltfschoen/wasm-bindgen" }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
