[package]
name = "webworker-example"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = { git = "https://github.com/ltfschoen/wasm-bindgen", package = "js-sys" }
wasm-bindgen = { git = "https://github.com/ltfschoen/wasm-bindgen" }
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "Location",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
] }
