[package]
name = "yew-tailwindcss-example"
version = "0.1.0"
authors = ["Anthony Dodd <dodd.anthonyjosiah@gmail.com>", "Danny Wensley <dannywensley7@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = { git = "https://github.com/ltfschoen/wasm-bindgen" }
yew = "0.18"
